--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/lista.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/lista.dark.css">
     <link rel="shortcut icon" href="img/logo3.png">
     <script defer src="js/lista.js"></script>
